discussion/kv_engine/155325/155325_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

Test clang-tidy

Change-Id: Id59d503a56fd211f798fbbfb25344e2b41ecb590

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2021-06-15 09:41:59.000000000
Message: 
Patch Set 7: Patch Set 6 was rebased
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-15 10:06:29.000000000
Message: 
Patch Set 7: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9892/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/server_log_iface.h:14:10: error: "spdlog/common.h" file not found [clang-diagnostic-error]
#include <spdlog/common.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9892/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/server_log_iface.h:14:10:
error: "spdlog/common.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9892/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8478/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36881/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/398/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31510/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19474/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10540/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11612/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11459/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11887/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Richard de Mellow
Date: 2021-06-15 12:47:07.000000000
Message: 
Set Work In Progress
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-15 13:22:40.000000000
Message: 
Patch Set 7:

Build Successful 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36897/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/412/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11626/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11473/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10555/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11901/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19489/ : SUCCESS'
----------------------------------------------------------------------------------------------------------------------
